--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,6 +7,8 @@
     "rootDir": "./src",
     "esModuleInterop": true,
     "strict": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
