BE-02: Created base entity for administative fields inheritance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "typescriptreact",
     "javascriptreact"
   ],
+  "eslint.useFlatConfig": true,
   "prettier.requireConfig": true,
   "prettier.singleQuote": true,
   "prettier.semi": true,
